# pc-price-forecast

./: README.md  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/processed/: test.parquet  train.parquet  valid.parquet
models/: dataset_meta.json  metrics.json
reports/: feature_importance.csv
scripts/: build_dataset.py  predict.py  train_catboost.py  validate_data.py
src/pc_price_forecast/: config.py
src/pc_price_forecast/data/: clean.py  split.py  validate.py
src/pc_price_forecast/io/: read_csv.py  save_artifacts.py
src/pc_price_forecast/utils/: logger.py
